hphp/hack/test/typecheck/tconst/subsume_tconst5.php.exp
File "subsume_tconst5.php", line 9, characters 23-24:
Cannot re-declare this type constant as abstract (Typing[4142])
File "subsume_tconst5.php", line 5, characters 14-15:
Previously defined here
